main/default/objects/Error_Log__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <description>This field will be used to store Error Message</description>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>