main/default/objects/Error_Log__c/fields/Error_Operation__c.field-meta.xml
<CustomField>
    <fullName>Error_Operation__c</fullName>
    <description>Will help us identify Operation which caused the error.</description>
    <label>Error Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>