main/default/objects/Error_Log__c/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <description>Function name from where call is made.</description>
    <label>Function Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>