main/default/objects/Error_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Optional objectName. E.g. could be used to log the Request and Response of a web callout</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>