main/default/objects/Error_Log__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <description>The salesforce record or job ID related to the log.</description>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>