main/default/objects/Error_Log__c/fields/Short_Message__c.field-meta.xml
<CustomField>
    <fullName>Short_Message__c</fullName>
    <description>Can be used to store short message.</description>
    <label>Short Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>