main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Operation__c</columns>
    <columns>Error_Description__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Reference_ID__c</columns>
    <columns>Short_Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>